# 3powers

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md
.3powers/: README.md  ledger.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
docs/: README.md  STATUS.md  brownfield.md  cli-reference.md  concepts.md  engine-architecture.md  getting-started.md  glossary.md  migration-remove-speckit.md  threat-model.md  troubleshooting.md
e2e/: README.md  run.sh
e2e/harness/: bootstrap.py  pyproject.toml
e2e/python-inventory/project/: .gitignore  README.md  pyproject.toml
e2e/python-inventory/project/src/inventory/: __init__.py  errors.py
e2e/python-inventory/project/src/inventory/config/: settings.py
e2e/python-inventory/project/src/inventory/domain/: models.py
e2e/python-inventory/project/src/inventory/logging/: logger.py
e2e/python-inventory/project/src/inventory/service/: inventory_service.py
e2e/python-inventory/project/tests/integration/: test_inventory_service.py
e2e/python-inventory/project/tests/unit/: test_config.py  test_models.py
engine/: LICENSE  README.md  pyproject.toml
engine/src/threepowers/: __init__.py  adapters.py  agentpins.py  agents.py  anchor.py  artifacts.py  autofix.py  canonical.py  catalog.py  characterize.py  cli.py  completion.py  config.py  configdrift.py  conformance.py  covdiff.py  deps.py  design.py  deviations.py  evals.py  frame.py  gaming.py  gates.py  gitflow.py  hosted.py  keys.py  ledger.py  lifecycle.py  mutation.py  notify.py  observe.py  oracle.py  orchestrate.py  phases.py  progress.py  prompts.py  provenance.py  runlock.py  runner.py  runpreflight.py  (+12 more)
engine/src/threepowers/cli/: __init__.py  __main__.py  _common.py  bootstrap.py  brownfield.py  exceptions.py  gate.py  keys.py  observe.py  oracle.py  run.py  supply.py  trust.py
engine/src/threepowers/scaffold/: agents-template.md  constitution.md  gitignore
engine/src/threepowers/scaffold/adapters/go/: adapter.yaml
engine/src/threepowers/scaffold/adapters/python/: adapter.yaml
engine/src/threepowers/scaffold/adapters/typescript/: adapter.yaml
engine/src/threepowers/scaffold/agents/: aider.yaml  claude.yaml  codex.yaml  copilot-hosted.yaml  copilot.yaml  opencode.yaml
engine/src/threepowers/scaffold/agents/schema/: claude.schema.json  codex.schema.json  opencode.schema.json
engine/src/threepowers/scaffold/config/: auto-fix.yaml  context.yaml  dependencies.yaml  design-oracles.yaml  gates.yaml  git.yaml  models.yaml  notifications.yaml  observability.yaml  risk-tiers.yaml  roles.yaml  scan.yaml  ui.yaml
engine/src/threepowers/scaffold/config/schema/: context.schema.json  dependencies.schema.json  design-oracles.schema.json  gates.schema.json  git.schema.json  observability.schema.json  risk-tiers.schema.json  roles.schema.json  scan.schema.json  ui.schema.json
engine/src/threepowers/scaffold/speckit/: extension.yml
engine/src/threepowers/scaffold/speckit/commands/: 3pwr.oracle.md  3pwr.tests-gaps.md
engine/src/threepowers/scaffold/templates/agents/: advance.agent.md  characterize.agent.md  clarify.agent.md  commit-note.agent.md  discovery.agent.md  generic.agent.md  implement.agent.md  implementation-plan.agent.md  oracle.agent.md  plan.agent.md  preamble.agent.md  review.agent.md  revise.agent.md  specify.agent.md  tasks.agent.md
engine/src/threepowers/scaffold/workflows/3powers/: lifecycle.yml
engine/tests/: test_adapters.py  test_agents.py  test_anchor.py  test_antigaming.py  test_artifacts.py  test_auto_docs.py  test_auto_fix.py  test_auto_readiness.py  test_canonical.py  test_characterize.py  test_cli.py  test_cli_experience.py  test_cli_package.py  test_config.py  test_config_schemas.py  test_conformance.py  test_conformance_binding.py  test_conformance_layers.py  test_covdiff.py  test_covdiff_git.py  test_coverage_map.py  test_custody.py  test_defect.py  test_deps.py  test_design_oracles.py  test_deviations.py  test_diversity.py  test_docs_onboarding.py  test_docx_decruft.py  test_evals.py  test_external_signer.py  test_gaming.py  test_gate_config.py  test_gate_diagnostics.py  test_gate_pipeline.py  test_gates.py  test_git_lifecycle.py  test_gitflow.py  test_headless_run.py  test_hosted.py  (+41 more)
engine/tests/e2e/: test_hardening_e2e.py  test_lifecycle_e2e.py  test_live_run.py  test_speclock_e2e.py
engine/tests/fixtures/usage/: README.md  aider.txt  aider_analytics.jsonl  claude.json  claude_stream.jsonl  claude_stream_modelusage.jsonl  codex.jsonl  codex.txt  codex_json.jsonl  copilot-cached.txt  copilot.txt  copilot_events.jsonl  copilot_summary.txt  opencode.jsonl
engine/tests/golden/: classify_fix_a_crash.json  classify_fix_a_crash.txt  run_status_nope.txt
engine/tests/integration/: test_conformance_integration.py  test_diff_mutation_integration.py  test_speclock_integration.py
landing/: index.html  styles.css  the_AI-First_SDD_Playbook_v1_0.html
plan/: 001-base-setup-and-tech-stack.md  002-self-application-and-scanners.md  003-complete-v0.1-mvp.md  004-scope-provenance-residual.md  005-sast-and-eval-harness.md  006-v1.0-and-hardening.md  007-emergency-and-deviation.md  008-oracle-independence.md  009-portability-and-dependencies.md  010-observe-and-feedback.md  011-a3-live-headless-dispatch.md  012-diversity-recommend-not-force.md  013-orchestration-loop.md  014-hardening-core.md  015-defect-design-go-adapter.md  016-spec-integrity.md  017-trust-hardening.md  018-native-executive.md  018-oss-readiness.md  019-init-experience.md  019-remove-speckit.md  020-headless-run.md  021-live-executive-hardening.md  022-docs-and-decruft.md  023-phased-execution.md  024-auto-mode-readiness.md  025-cli-experience.md  026-stage-agents-and-role-setup.md  027-run-artifact-workspace.md  028-git-lifecycle-integration.md  029-run-steering.md  030-run-identity-gates-ux.md  031-public-text-decruft-and-cli-split.md  032-e2e-adapter-notebook-projects.md  033-v1-readiness-and-lifecycle-hardening.md  034-prompt-templates-and-discovery-stage.md  035-actionable-verdict-remediation.md  (+16 more)
(+188 files in other folders)
