[project]
name = "threepowers"
version = "0.1.0"
description = "3Powers — judiciary kit engine (gate runner, hash-chained verdict ledger, verify) layered on GitHub Spec Kit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "3Powers" }]
dependencies = [
    "cryptography>=42",
    "PyYAML>=6",
]

[project.scripts]
"3pwr" = "threepowers.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "hypothesis>=6",
    "types-PyYAML>=6",
    "mutmut>=2.4",
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/threepowers"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
