[project]
name = "threepowers"
version = "0.1.0"
description = "3Powers — judiciary kit engine (gate runner, hash-chained verdict ledger, verify) layered on GitHub Spec Kit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "3Powers" }]
dependencies = [
    "cryptography>=42",
    "PyYAML>=6",
]

[project.scripts]
"3pwr" = "threepowers.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "hypothesis>=6",
    "types-PyYAML>=6",
    "mutmut>=2.4",
]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/threepowers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Mutation testing is scoped to the High-risk trust-spine modules (spec §4); the
# full sweep runs on a schedule (3PWR-NFR-002), not on every change (3PWR-FR-031).
#
# src-layout note: mutmut 3.x copies `source_paths` into `mutants/` and puts
# `mutants/src` on sys.path, so the WHOLE package must be copied for `import
# threepowers` to resolve — but we only want to *mutate* the four trust-spine
# modules. So `source_paths` is the package (everything is copied verbatim) and
# `only_mutate` narrows mutation to the High-risk files (others are copied, not
# mutated). This keeps the mutated package importable while honouring §4 scoping.
[tool.mutmut]
source_paths = ["src/threepowers"]
only_mutate = [
    "src/threepowers/canonical.py",
    "src/threepowers/keys.py",
    "src/threepowers/ledger.py",
    "src/threepowers/speclock.py",
    "src/threepowers/verify.py",
]
