[project]
name = "3powers"
version = "1.0.1"
description = "An open agent harness with a judiciary: drives coding agents through the whole lifecycle, then judges their work with an independent oracle, deterministic gates, and a signed verdict ledger you can verify offline."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "3Powers" }]
keywords = [
    "spec-driven-development",
    "agentic",
    "code-review",
    "quality-gates",
    "oracle",
    "verdict-ledger",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "cryptography>=42",
    "PyYAML>=6",
    "rich>=13.7,<15",
]

[project.scripts]
"3pwr" = "threepowers.cli:main"

[project.urls]
Homepage = "https://github.com/VerzCar/3powers"
Repository = "https://github.com/VerzCar/3powers"
Issues = "https://github.com/VerzCar/3powers/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "hypothesis>=6",
    "types-PyYAML>=6",
    "mutmut>=2.4",
]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/threepowers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Mutation testing is scoped to the High-risk trust-spine modules (spec §4); the
# full sweep runs on a schedule (3PWR-NFR-002), not on every change (3PWR-FR-031).
#
# src-layout note: mutmut 3.x copies `source_paths` into `mutants/` and puts
# `mutants/src` on sys.path, so the WHOLE package must be copied for `import
# threepowers` to resolve — but we only want to *mutate* the four trust-spine
# modules. So `source_paths` is the package (everything is copied verbatim) and
# `only_mutate` narrows mutation to the High-risk files (others are copied, not
# mutated). This keeps the mutated package importable while honouring §4 scoping.
[tool.mutmut]
source_paths = ["src/threepowers"]
only_mutate = [
    "src/threepowers/anchor.py",
    "src/threepowers/canonical.py",
    "src/threepowers/keys.py",
    "src/threepowers/ledger.py",
    "src/threepowers/speclock.py",
    "src/threepowers/verify.py",
]
