[project]
name = "inventory"
version = "0.1.0"
description = "Inventory-tracking service — the Python sample for the 3pwr e2e kit."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inventory"]

# Dev toolchain the Python adapter drives (ruff / mypy / pytest-cov / mutmut).
# uv installs this group by default on `uv sync`, so `uv run <tool>` resolves it.
[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.122.0",
    "mutmut>=3.2.0",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# Mutation is opt-in (adapter tier_min: High-risk); wired here, not run at Standard.
[tool.mutmut]
paths_to_mutate = ["src/inventory/"]
tests_dir = ["tests/"]
